[project]
name = "nonebot-plugin-baize"
dynamic = ["version"]
description = "A group authentication plugin based on the Baize myth"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2>=2.3",
]

requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/afterow/nonebot-plugin-baize" 

[dependency-groups]
dev = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["nonebot_plugin_baize"]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_baize/__init__.py"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
