[project]
name = "nonebot-plugin-baize"
dynamic = ["version"]
authors = [
    { name = "afterow", email = "afterow@163.com" }
]
description = "基于白泽神话的群验证插件"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2>=2.3"
]
classifiers = [
    "Framework :: Pydantic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: Chinese (Simplified)"
]

[tool.nonebot]
plugins = ["nonebot_plugin_baize"]
plugin_dirs = ["nonebot_plugin_baize"]
builtin_plugins = ["echo"]
[tool.setuptools.packages.find]
where = ['nonebot_plugin_baize']
include = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_baize/__init__.py"

[project.urls]
"Homepage" = "https://github.com/afterow/nonebot-plugin-baize"
"Bug Tracker" = "https://github.com/afterow/nonebot-plugin-baize/issues"
